Add official app icon & modify app name
Signed-off-by: Calin Neamtu <nilac8991@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">MX ADB FileTransfer</string>
+    <string name="app_name">ADB FileTransfer Wrapper</string>
 </resources>
